--- a/README.ipynb
+++ b/README.ipynb
@@ -1,36 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# Week5 Assignments - Plotting\n",
+    "# ChIP-Seq peak-caller output\n",
     "\n",
-    "This assignment is exploratory. You still have to submit the assignment, but no need to follow the specific instructions provided.\n",
+    "In this project I determine the optimal parameters for running a ChIP-Seq peak-caller. \n",
     "\n",
-    "The basic idea is to play with some of the plotting functions. Plotting tends to be somewhat situation- and data- specific. If you already have data, we encourage you to use those data in this assignment and play around with some plots. We can provide feedback through OKPy to any explicit questions you may have or anything we notice in your code.\n",
+    "This file creates binary heatmaps of optimal parameter combinations\n",
+    "for running MACS2, a ChIP-Seq peak-caller. ChIP-Seq (Chromatin \n",
+    "immunoprecipitation sequencing) peak-callers identify\n",
+    "locations of protein-binding in DNA. MACS2 is an alogrithm for doing that.\n",
+    "The optimal parameter combination was defined as the combination\n",
+    "which maximizes the Matthews Correlation Coefficient of the data. \n",
     "\n",
-    "If you do not have data, you can obtain data from any of the following sources:\n",
-    "* https://catalog.data.gov/dataset\n",
-    "* http://mlr.cs.umass.edu/ml/datasets.html\n",
-    "* https://www.kaggle.com/datasets\n",
-    "* https://opendata.socrata.com\n",
-    "\n",
-    "\n",
-    "\n",
-    "Either from your data or from the data provided above, try to create plots to glean anything interesting from the data. Plot features against each other and color by some factor, overlay histograms of different features, create boxplots, etc. Feel free to look at some of the plot templates available on the matplotlib / bokeh / seaborn websites, and see if you can recreate something they have done.\n",
-    "\n",
-    "For more specificity, you can try to work through the following tasks:\n",
-    "1. With matplotlib: Plot a notched boxplot of a given feature.\n",
-    "2. With matplotlib: Plot an overlaid histogram of two features, each feature in a different color.\n",
-    "3. With Pandas: Plot a histogram of a specific column.\n",
-    "4. With Seaborn: Plot a histogram with a density line.\n",
-    "5. With Seaborn: Plot a scatterplot with a trend line.\n",
-    "6. With matplotlib: Plot three scatterplots on the same plot, with each having a different color and shape.\n",
-    "\n",
-    "Do not necessarily feel bound by these tasks - while you should know how to complete them, preferably look at your dataset and think of plots that would be informative, and try to implement them. \n",
-    "\n",
-    "If you don't have a dataset that catches your interest, you can use sklearn's built-in wine dataset. In the cell below we've provided the code to load it and format it for easier use. We've also provided the solution to the first task using the wine dataset."
+    "The input files are f_ca and f_sample, which have the optimal peak-caller \n",
+    "combinations for each celltype-antibody combiation and for each sample, \n",
+    "respectively. The other files are all of the output files that use different "
    ]
   },
   {
@@ -49,19 +40,6 @@
     "import seaborn as sns\n",
     "\n",
     "sns.set()\n",
-    "\n",
-    "# This is part of the exploratory data analysis step of my project in which I \n",
-    "# determine the optimal parameters for running a ChIP-Seq peak-caller. \n",
-    "\n",
-    "# This file creates binary heatmaps of optimal parameter combinations\n",
-    "# for running MACS2, a ChIP-Seq peak-caller. ChIP-Seq peak-callers identify\n",
-    "# locations of protein-binding in DNA. MACS2 is an alogrithm for doing that.\n",
-    "# The optimal parameter combination was defined as the combination\n",
-    "# which maximizes the Matthews Correlation Coefficient of the data. \n",
-    "\n",
-    "# The input files are f_ca and f_sample, which have the optimal peak-caller combinations for \n",
-    "# each celltype-antibody combiation and for each sample, respectively.\n",
-    "# The other files are all of the output files that use different \n",
     "\n",
     "f_ca = \"/data/Lei_student/Hussain/ML/dm6/peakerror/optimal/optimal_ca.csv\"\n",
     "f_sample = \"/data/Lei_student/Hussain/ML/dm6/peakerror/optimal/optimal_sample.csv\"\n",
